# mcpp

./: README.md  multi_robot.launch
homeworks/h1/task_2/: CMakeLists.txt  install.sh
homeworks/h2/: a.cpp  b.cpp
homeworks/h3/: CMakeLists.txt
homeworks/h3/src/: e1.cpp  e2.cpp  e3.cpp  e4.cpp  e5.cpp
homeworks/h4/: example.html
the_cherno/d1/: CMakeLists.txt  d1.cpp  math.cpp
the_cherno/d2/: CMakeLists.txt  Math.cpp  variables.cpp.ii  variables.cpp.o.d  variables.cpp.s
the_cherno/d3/: CMakeLists.txt  Log.cpp  README.md  functions.cpp  header.cpp
